--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,25 @@
-#col1{
-  color:red;
-  background-color:aqua;
+#button{
+    width: 60px;
+    height: 50px;
+    border-radius : 20%;
+    background-color: bisque;
+}
+#input_holder{
+    height:100px;
+    width:350px;
+}
+#box{
+    width:400px;
+    height:500px;
+    display: flex;
+    background-color: dimgrey;
+    flex-direction: column;
+    align-items:center;
+    justify-content:space-between;
+    border-radius: 5%;
+}
+#col {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
